волонтёр может подтвердить свое участие в инциденте (пока без kafka)
