# src/main/java/ru/rom8/rescue/volunteer/controller/VolunteerController.java
@@ -4,8 +4,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
 import ru.rom8.rescue.volunteer.api.VolunteerApi;
 import ru.rom8.rescue.volunteer.api.model.VolunteerDto;
+import ru.rom8.rescue.volunteer.api.model.VolunteerIncidentActionRequest;
 import ru.rom8.rescue.volunteer.api.model.VolunteerRegisterRequest;
 import ru.rom8.rescue.volunteer.api.model.VolunteerUpdateRequest;
+import ru.rom8.rescue.volunteer.service.VolunteerIncidentActionService;
 import ru.rom8.rescue.volunteer.service.VolunteerRegistrationService;
 
 @RestController
@@ -13,6 +15,12 @@ import ru.rom8.rescue.volunteer.service.VolunteerRegistrationService;
 public class VolunteerController implements VolunteerApi {
 
     private final VolunteerRegistrationService volunteerRegistrationService;
+    private final VolunteerIncidentActionService volunteerIncidentActionService;
+
+    @Override
+    public VolunteerDto actOnIncident(String xUserId, VolunteerIncidentActionRequest volunteerIncidentActionRequest) {
+        return volunteerIncidentActionService.actOnIncident(xUserId, volunteerIncidentActionRequest);
+    }
 
     @Override
     public VolunteerDto registerMe(VolunteerRegisterRequest volunteerRegisterRequest) {
